- #7186 There are no additional TLS options for all users setting

Enhancements:
- #7183 Refactoring for Synergy 3 licenses
- #7190 Maintenance license serial key support
- #7193 Support for maintenance licenses in China
- #7197 Special contributor mentions on the about screen

Github Actions:
- #7210 Update macos workflow to use macos-latest

1.14.4
======

Bug fixes:
- #7144 Double lines when pasting text from Linux to Windows
- #7149 Address issues with modifiers and dead keys
- #7163 Fix compilation issues for FreeBSD
- #7172 Memory leaks in language sync and TLS functionality
- #7175 Memory leaks in copy/paste and drag and drop functionality
- #7179 Disable drag and drop by default

Enhancements:
- #7143 Ability to stop Synergy on the login screen
- #7157 Synergy Business accepts only business licenses
- #7188 Synergy Basic\Pro accepts business licenses
- #7166 Replace language notifications with warnings in logs
- #7181 Fedora 36 support to CI system

Github Actions:
- #7177 Create workflow for flatpak build support
- #7148 Fix unstable build for Windows core
- #7156 Change binary storage server
- #7161 Use brew bundle to install dependencies
- #7162 Add new distributions to CI
- #7167 Use changelog when creating deb files
- #7169 Remove temporary directory when building debs
- #7174 Show all workflows for Raspberry Pi
- #7187 Rename flatpak to match other builds

1.14.3
======

Bug fixes:
- #7135 Fix issue with function keys on macOS
- #7140 Configure scroll direction on a per-computer basis
- #7141 Code refactoring for the configure scroll direction task

1.14.2
======

Bug fixes:
- #7070 Radio button shifted focus on macOS
- #7038 Client and server different keyboard layout errors
- #7078 Clipboard re-enables automatically
- #7077 Broken Ubuntu, CentOS and Debian build
- #7080 Trace if the system can't open file with trusted fingerprints
- #7081 Dialog shouldn't appear for autoconfig functionality